--- a/proyecto_final_coder/application1/templates/base.html
+++ b/proyecto_final_coder/application1/templates/base.html
@@ -11,17 +11,17 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/application1">Reservas</a>
+        <a class="navbar-brand" href="/application1">Registros</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/application1/list">Todas las Reservas</a>
+                    <a class="nav-link" href="/application1/list">Todos los registros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'bookings-list' %}">XXXXXX</a>
+                    <a class="nav-link" href="{% url 'application1-list' %}">XXXXXX</a>
                 </li>
             </ul>
         </div>
