--- a/proyecto_final_coder/application1/templates/home.html
+++ b/proyecto_final_coder/application1/templates/home.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <section>
-    <h2>Bienvendios a la home de Reservas!</h2>
+    <h2>Bienvendios a la home de Registros!</h2>
 </section>
 {% endblock %}
