--- a/proyecto_final_coder/application1/templates/base.html
+++ b/proyecto_final_coder/application1/templates/base.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/application1/list">Todos los registros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'application1-list' %}">XXXXXX</a>
+                    <a class="nav-link" href="{% url "application1-list" %}">Buscar</a>
                 </li>
             </ul>
         </div>
