--- a/proyecto_final_coder/application1/templates/application1/home.html
+++ b/proyecto_final_coder/application1/templates/application1/home.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'application1/base.html' %}
 
 {% block content %}
 <section>
-    <h2>Bienvenidos a la home de Registros!</h2>
+    <h3>Bienvenidos a la home de Registros!</h3>
 </section>
 {% endblock %}
