--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/home.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/home.html
@@ -1,7 +1,9 @@
 {% extends 'reserva_turnos/base.html' %}
 
+{% block title %} Turnos {% endblock title %}
+
 {% block content %}
 <section>
-    <h3>Bienvenidos a la home de Turnos!</h3>
+    <h2>Bienvenidos a la home de turnos!</h2>
 </section>
 {% endblock %}
