--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/base.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/base.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Turnos {% endblock title %}</title>
     <!-- Bootstrap CSS CDN (Bootstrap 4 used as an example) -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="{% static 'reserva_turnos/css/bootstrap.css' %}">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/reserva_turnos">Turnos</a>
+        <a class="navbar-brand" href="/reserva_turnos">Home Turnos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/reserva_turnos/list">Todos los turnos</a>
+                    <a class="nav-link" href="/reserva_turnos/list">Todos los Turnos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "application1-home" %}">Registros</a>
+                    <a class="nav-link" href="{% url 'reserva_turnos-list' %}">Volver</a>
                 </li>
             </ul>
         </div>
