--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/detail.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/detail.html
@@ -16,9 +16,10 @@
                         <h6 class="card-subtitle mb-2 text-muted">Consultorio: {{ turno.consultorio }}</h6>
                         <p class="card-text">Fecha: {{ turno.fecha | date:"d/m/Y" }}</p>
                         <p class="card-text">Profesional: {{ turno.profesional }}</p>
+                        <p class="card-text">Especialidad: {{ profesional.especialidad }}</p>
                         <p class="card-text">Hora de inicio: {{ turno.hora_inicio | date:"H:i" }}</p>
                         <p class="card-text">Hora de fin: {{ turno.hora_fin | date:"H:i" }}</p>
-                        <p class="card-text">Descripción: {{ turno.descripcion }}</p>
+                        <p class="card-text">Detalle: {{ turno.descripcion }}</p>
                     </div>
                     {% comment %}
                     <div class="card-footer text-muted">
