--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_search.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_search.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2 class="mb-4">Buscar turno</h2>
-            <a href="{% url 'reserva_turnos-list' %}" class="btn btn-primary">Volver</a>
+            <a href="{% url 'vbc_turnos_list' %}" class="btn btn-primary">Volver</a>
         </div>  
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -16,9 +16,9 @@
                         Filtros de búsqueda
                     </div>
                     <div class="card-body">
-                        <form method="POST" action="{% url "buscar_turnos" %}">  
+                        <form method="POST" action="{% url "vbc_turnos_search" %}">  
                             {% csrf_token %}  <!-- CSRF Token added here -->
-                            {{ search_form.as_p }}  
+                            {{ form.as_p }}  
                             <button type="buscar" class="btn btn-primary">Buscar</button>
                         </form>
                     </div>
