--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_create.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_create.html
@@ -1,13 +1,13 @@
 {% extends 'reserva_turnos/base.html' %}
 
-{% block title %}Crear Turno{% endblock %}
+{% block title %}{% if object %}Modificar Turno {{ object.nombre }}{% else %}Crear Turno{% endif %}{% endblock %}
 
 {% block content %}
 <section class="py-5">
     <div class="container">
         <div class="d-flex justify-content-between align-items-center mb-3">
-            <h2 class="mb-4">Crear turno</h2>
-            <a href="{% url 'reserva_turnos-list' %}" class="btn btn-primary">Volver</a>
+            <h2 class="mb-4">{% if object %}Modificar Turno {{ object.nombre }}{% else %}Crear Turno{% endif %}</h2>
+            <a href="{% url 'vbc_turnos_list' %}" class="btn btn-primary">Volver</a>
         </div>  
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -16,9 +16,9 @@
                         Datos del turno
                     </div>
                     <div class="card-body">
-                        <form method="POST" action="{% url "crear_turnos" %}">  <!-- Pablo notó esto !! -->
+                        <form method="POST" action="{% url "vbc_turnos_create" %}">  <!-- Pablo notó esto !! -->
                             {% csrf_token %}  <!-- CSRF Token added here -->
-                            {{ create_form.as_p }}  <!------------------------------------- Pablo notó esto !! -->
+                            {{ form.as_p }}  <!------------------------------------- Pablo notó esto !! -->
                             <button type="buscar" class="btn btn-primary">Registrar Turno</button>                
                         </form>
                     </div>
