--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_detail.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_detail.html
@@ -26,8 +26,8 @@
                         <p class="card-text">Detalle: {{ turnos.descripcion }}</p>
                     </div>
                     <div class="card-footer text-muted">
-                        <a href="{% url 'vbc_turnos_update' turnos.id %}" class="btn btn-primary">Editar Reserva</a>
-                        <a href="{% url 'vbc_turnos_delete' turnos.id %}" class="btn btn-danger">Eliminar Reserva</a>
+                        <a href="{% url 'vbc_turnos_update' turnos.id %}" class="btn btn-primary">Editar Turno</a>
+                        <a href="{% url 'vbc_turnos_delete' turnos.id %}" class="btn btn-danger">Eliminar Turno</a>
                         <a href="{% url 'vbc_turnos_list' %}" class="btn btn-secondary">Volver al listado</a>
                     </div>
                 </div>
