--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/list.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/list.html
@@ -42,7 +42,7 @@
                 {% endfor %}
                 {% else %}
                 <tr>
-                    <td colspan="7">No hay turnos disponibles.</td>
+                    <td colspan="7">No hay turnos para ese usuario ingresado.</td>
                 </tr>
                 {% endif %}
             </tbody>
