--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/list_profesional.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/list_profesional.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2 class="mb-4">Profesionales</h2>
-            <a href="{% url 'vbc_profesionales_create' %}" class="btn btn-success">Registrar Profesional</a>
+            <a href="{% url 'crear_profesional' %}" class="btn btn-success">Registrar Profesional</a>
         </div>
         <table class="table">
             <thead>
@@ -19,22 +19,22 @@
                 </tr>
             </thead>
             <tbody>
-                {% if profesionales %}
-                {% for profesional in profesionales %}
+                {% if todos_los_profesionales %}
+                {% for profesionales in todos_los_profesionales %}
                 <tr>
                     <th scope="row">{{ forloop.counter }}</th>
-                    <td>{{ profesional.nombre }}</td>
-                    <td>{{ profesional.especialidad }}</td>
+                    <td>{{ profesionales.nombre }}</td>
+                    <td>{{ profesionales.especialidad }}</td>
                     <td>
-                        <a href="{% url 'vbc_profesionales_detail' profesional.id %}" class="btn btn-primary btn-sm">Ver</a>
-                        <a href="{% url 'vbc_profesionales_update' profesional.id %}" class="btn btn-success btn-sm">Editar</a>
-                        <a href="{% url 'vbc_profesionales_delete' profesional.id %}" class="btn btn-danger btn-sm">Eliminar</a> 
+                        <a href="{% url 'profesional-detail' profesionales.id %}" class="btn btn-primary btn-sm">Ver</a>
+                        <a href="{% url 'profesional-update' profesionales.id %}" class="btn btn-success btn-sm">Editar</a>
+                        <a href="{% url 'profesional-delete' profesionales.id %}" class="btn btn-danger btn-sm">Eliminar</a>
                     </td> 
                 </tr>
                 {% endfor %}
                 {% else %}
                 <tr>
-                    <td colspan="7">No hay profesionales disponibles para esa especialidad.</td>
+                    <td colspan="7">No hay profesionales disponibles.</td>
                 </tr>
                 {% endif %}
             </tbody>
