--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/base.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/base.html
@@ -17,6 +17,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                {% if user.is_authenticated %}
                 <!-- Dropdown for Turnos -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkReserva" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -38,7 +39,7 @@
                         <a class="dropdown-item" href="{% url 'vbc_turnos_create' %}">Crear Turno</a>
                         <a class="dropdown-item" href="{% url 'buscar_turnos' %}">Buscar Turno por usuario</a>
                     </div>
-                <!-- Dropdown for Turnos -->
+                <!-- Dropdown for Profesionales -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkReserva" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Profesionales
@@ -80,9 +81,26 @@
                         {% comment %} <a class="dropdown-item" href="{% url 'buscar_turnos' %}">Buscar Turno por usuario</a> {% endcomment %}
                     </div>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url "reserva_turnos-home" %}">Volver</a>
+                    <a class="nav-link" href="{% url "reserva_turnos-home" %}">Home</a>
                 </li>
+                {% endif %}
             </ul>
+            <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'editar-perfil' %}">{{ user }}</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'crear-usuario' %}">Crear Usuario</a>
+                </li>
+                {% endif %}
         </div>
     </nav>
     <!-- Main content -->
