cambios proyecto final

--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/avatar_create.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/avatar_create.html
@@ -14,7 +14,7 @@
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <button type="submit" class="btn btn-primary">Guardar</button>
-                                <a href="{% url 'reserva_turnos-list' %}">Cancel</a>
+                                <a href="{% url 'reserva_turnos-home' %}">Cancel</a>
                             </form>
                         </div>
                     </div>
