--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_detail.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/vbc/turnos_detail.html
@@ -21,8 +21,7 @@
                         <p class="card-text">Fecha: {{ turnos.fecha | date:"d/m/Y" }}</p>
                         <p class="card-text">Profesional: {{ turnos.profesional }}</p>
                         <p class="card-text">Especialidad: {{ profesional.especialidad }}</p>
-                        <p class="card-text">Hora de inicio: {{ turnos.hora_inicio | date:"H:i" }}</p>
-                        <p class="card-text">Hora de fin: {{ turnos.hora_fin | date:"H:i" }}</p>
+                        <p class="card-text">Horario: {{ turnos.hora_inicio | date:"H:i" }}</p>
                         <p class="card-text">Detalle: {{ turnos.descripcion }}</p>
                     </div>
                     <div class="card-footer text-muted">
