--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/home.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/home.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <section>
-    <h2>Bienvenidos a Vanguardia Center, Centro medico especializado.</h2>
+    <h2>Bienvenidos a Vanguardia Center, Centro Médico Especializado.</h2>
 </section>
 {% endblock %}
