--- a/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/base.html
+++ b/proyecto_final_coder/reserva_turnos/templates/reserva_turnos/base.html
@@ -88,6 +88,9 @@
             <ul class="navbar-nav ml-auto">
                 {% if user.is_authenticated %}
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">About</a> 
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a> 
                 </li>
                 <li class="nav-item">
